# Image-Crawler-Utils

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_zh.md  pyproject.toml
docs/: README_zh.md  building_a_crawler.md  classes_and_functions.md  notes_for_tasks.md  requirements.txt  tutorials.md  tutorials_zh.md
docs/source/: conf.py  get_started.rst  image_crawler_utils.image_downloader.rst  image_crawler_utils.rst  image_crawler_utils.stations.booru.rst  image_crawler_utils.stations.pixiv.rst  image_crawler_utils.stations.rst  image_crawler_utils.stations.twitter.rst  index.rst  modules.rst
docs/source/JSONs/: Danbooru 4994142.json  Gelbooru 7963712 gallery.json  Gelbooru 7963712 use_api.json  Gelbooru 7963712.json  Pixiv 60066082_p0 full.json  Pixiv 60066082_p0 keyword_quick.json  Pixiv 60066082_p0 user_quick.json  Safebooru 2193950.json  Twitter 1622634960543973376.json  konachan.net 249445.json  yande.re 444116 gallery.json  yande.re 444116 use_api.json
examples/: danbooru_example.py  example.py  gelbooru_example.py  konachan_example.py  pixiv_keyword_example.py  pixiv_user_example.py  safebooru_example.py  twitter_keyword_example.py  twitter_user_example.py  yandere_example.py
image_crawler_utils/: __init__.py  configs.py  keyword.py  log.py  progress_bar.py  user_agent.py  utils.py
image_crawler_utils/classes/: cookies.py  crawler_settings.py  downloader.py  image_info.py  parser.py
image_crawler_utils/image_downloader/: __init__.py  constants.py  core_downloader.py  general_downloader.py  pixiv_downloader.py  twitter_downloader.py
(+46 files in other folders)
